HASHMAP 적용중